# services-gateway

./: .gitignore  BUILD  Justfile  README.md  pants.toml  pyproject.toml
apps/carnival/app/: endpoints_handler.py  main.py
apps/gateway/: .env.example
apps/gateway/app/: config.py  main.py  supplier_name.py  supplier_request_router.py
apps/gateway/app/schemas/: get_cabin_grade_pricing.py  get_cabin_grades.py  get_rate_pricing.py  get_rates.py
apps/msc/: BUILD
apps/msc/app/: endpoints_handler.py  main.py
apps/msc/tests/: test_main.py
apps/ncl/app/: endpoints_handler.py  main.py
apps/royal/app/: endpoints_handler.py  main.py
libs/commons/tests/: test_init.py
libs/gateway/lib/: __init__.py  gateway_app.py  supplier_gateway_app.py
libs/gateway/lib/models/: cabin_grade.py  rate.py
libs/gateway/lib/schemas/: __init__.py  get_cabin_grade_pricing.py  get_cabin_grades.py  get_rate_pricing.py  get_rates.py
libs/supplier_gateway/lib/: __init__.py  endpoints_handler.py  supplier_gateway_app.py
libs/supplier_gateway/lib/models/: __init__.py  cabin_grade.py  rate.py
libs/supplier_gateway/lib/schemas/: __init__.py  get_cabin_grade_pricing.py  get_cabin_grades.py  get_rate_pricing.py  get_rates.py
