[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = { extras = ["standard"], version = "^0.30.1" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
