[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = "^2.8.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = ["D1", "D203", "D213", "D417"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
